# SLAY_4sem

./: README.md
Dense_CSR_Matrix/: matrix_classes.h  performance_tests.cpp  test.py
QR/: qr_decomposition.h  qr_solver.h  test_qr.cpp
TriDiagSolve/: CMakeLists.txt  test_tridiagonal_solver.cpp  tridiagonal_solver.cpp  tridiagonal_solver.h
